initialSetup/main/default/objects/Activity/fields/CRO_Research_Study__c.field-meta.xml
<CustomField>
    <fullName>CRO_Research_Study__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRO Research Study</label>
    <referenceTo>CRO_Research_Study__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>