initialSetup/main/default/objects/Activity/fields/Enrolled_Site__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrolled Site</label>
    <referenceTo>Enrolled_Site__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>