initialSetup/main/default/objects/Activity/fields/Healthcare_Facility__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Healthcare Facility</label>
    <referenceTo>HealthcareFacility</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>