initialSetup/main/default/objects/Activity/fields/Patient_Site__c.field-meta.xml
<CustomField>
    <fullName>Patient_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Site</label>
    <referenceTo>Patient_Site__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities_del</relationshipName>
    <type>Lookup</type>
</CustomField>