initialSetup/main/default/objects/Activity/fields/Research_Study__c.field-meta.xml
<CustomField>
    <fullName>Research_Study__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Study</label>
    <referenceTo>Research_Study__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>